포토폴리오 목록 페이지 조회수 증가 로직 추가
포토폴리오 목록 페이지 조회수 증가 로직 추가

--- a/src/main/resources/templates/list/portfolioList.html
+++ b/src/main/resources/templates/list/portfolioList.html
@@ -3,6 +3,7 @@
       layout:decorate="~{/fragments/layout}">
 <head>
     <link rel="stylesheet" th:href="@{/css/list/portfolioList.css}">
+    <script th:src="@{/js/list/portfolioList.js}"></script>
 </head>
 <th:block layout:fragment="content">
     <main>
@@ -40,7 +41,8 @@
             
             <section>
                 <div class="cardList" th:each="list : ${portfolioList}">
-                    <a href="#" th:href="@{/portfolio/list/detail(portfolioId=${list.id})}">
+                    <input type="hidden" id="portfolioId" th:value="${list.id}">
+                    <a href="#" th:href="@{/portfolio/list/detail(portfolioId=${list.id})}" th:onclick="hitUp(this)">
                         <img class="img" th:src="${list.personalWork}">
                             <!--포토폴리오 이미지가 들어갈 영역-->
                         </img>
@@ -55,246 +57,6 @@
                         </div>
                     </a>
                 </div><!--cardList-->
-<!--                <div class="cardList">-->
-<!--                    <a href="#">-->
-<!--                        <div class="img">-->
-<!--                            &lt;!&ndash;포토폴리오가 들어갈 영역&ndash;&gt;-->
-<!--                        </div>-->
-<!--                        <div class="portfolioSummary">-->
-<!--                            <div class="title">식품 브랜드 밀잇 브랜드 콘테스트</div>-->
-<!--                            <div class="info">-->
-<!--                                <h5>싱싱한초록546</h5> ·-->
-<!--                                <div class="hit">-->
-<!--                                    조회수 363-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>&lt;!&ndash;cardList&ndash;&gt;-->
-<!--                <div class="cardList">-->
-<!--                    <a href="#">-->
-<!--                        <div class="img">-->
-<!--                            &lt;!&ndash;포토폴리오가 들어갈 영역&ndash;&gt;-->
-<!--                        </div>-->
-<!--                        <div class="portfolioSummary">-->
-<!--                            <div class="title">식품 브랜드 밀잇 브랜드 콘테스트</div>-->
-<!--                            <div class="info">-->
-<!--                                <h5>싱싱한초록546</h5> ·-->
-<!--                                <div class="hit">-->
-<!--                                    조회수 363-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>&lt;!&ndash;cardList&ndash;&gt;-->
-<!--                <div class="cardList">-->
-<!--                    <a href="#">-->
-<!--                        <div class="img">-->
-<!--                            &lt;!&ndash;포토폴리오가 들어갈 영역&ndash;&gt;-->
-<!--                        </div>-->
-<!--                        <div class="portfolioSummary">-->
-<!--                            <div class="title">식품 브랜드 밀잇 브랜드 콘테스트</div>-->
-<!--                            <div class="info">-->
-<!--                                <h5>싱싱한초록546</h5> ·-->
-<!--                                <div class="hit">-->
-<!--                                    조회수 363-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>&lt;!&ndash;cardList&ndash;&gt;-->
-<!--                <div class="cardList">-->
-<!--                    <a href="#">-->
-<!--                        <div class="img">-->
-<!--                            &lt;!&ndash;포토폴리오가 들어갈 영역&ndash;&gt;-->
-<!--                        </div>-->
-<!--                        <div class="portfolioSummary">-->
-<!--                            <div class="title">식품 브랜드 밀잇 브랜드 콘테스트</div>-->
-<!--                            <div class="info">-->
-<!--                                <h5>싱싱한초록546</h5> ·-->
-<!--                                <div class="hit">-->
-<!--                                    조회수 363-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>&lt;!&ndash;cardList&ndash;&gt;-->
-<!--                <div class="cardList">-->
-<!--                    <a href="#">-->
-<!--                        <div class="img">-->
-<!--                            &lt;!&ndash;포토폴리오가 들어갈 영역&ndash;&gt;-->
-<!--                        </div>-->
-<!--                        <div class="portfolioSummary">-->
-<!--                            <div class="title">식품 브랜드 밀잇 브랜드 콘테스트</div>-->
-<!--                            <div class="info">-->
-<!--                                <h5>싱싱한초록546</h5> ·-->
-<!--                                <div class="hit">-->
-<!--                                    조회수 363-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>&lt;!&ndash;cardList&ndash;&gt;-->
-<!--                <div class="cardList">-->
-<!--                    <a href="#">-->
-<!--                        <div class="img">-->
-<!--                            &lt;!&ndash;포토폴리오가 들어갈 영역&ndash;&gt;-->
-<!--                        </div>-->
-<!--                        <div class="portfolioSummary">-->
-<!--                            <div class="title">식품 브랜드 밀잇 브랜드 콘테스트</div>-->
-<!--                            <div class="info">-->
-<!--                                <h5>싱싱한초록546</h5> ·-->
-<!--                                <div class="hit">-->
-<!--                                    조회수 363-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>&lt;!&ndash;cardList&ndash;&gt;-->
-<!--                <div class="cardList">-->
-<!--                    <a href="#">-->
-<!--                        <div class="img">-->
-<!--                            &lt;!&ndash;포토폴리오가 들어갈 영역&ndash;&gt;-->
-<!--                        </div>-->
-<!--                        <div class="portfolioSummary">-->
-<!--                            <div class="title">식품 브랜드 밀잇 브랜드 콘테스트</div>-->
-<!--                            <div class="info">-->
-<!--                                <h5>싱싱한초록546</h5> ·-->
-<!--                                <div class="hit">-->
-<!--                                    조회수 363-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>&lt;!&ndash;cardList&ndash;&gt;-->
-<!--                <div class="cardList">-->
-<!--                    <a href="#">-->
-<!--                        <div class="img">-->
-<!--                            &lt;!&ndash;포토폴리오가 들어갈 영역&ndash;&gt;-->
-<!--                        </div>-->
-<!--                        <div class="portfolioSummary">-->
-<!--                            <div class="title">식품 브랜드 밀잇 브랜드 콘테스트</div>-->
-<!--                            <div class="info">-->
-<!--                                <h5>싱싱한초록546</h5> ·-->
-<!--                                <div class="hit">-->
-<!--                                    조회수 363-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>&lt;!&ndash;cardList&ndash;&gt;-->
-<!--                <div class="cardList">-->
-<!--                    <a href="#">-->
-<!--                        <div class="img">-->
-<!--                            &lt;!&ndash;포토폴리오가 들어갈 영역&ndash;&gt;-->
-<!--                        </div>-->
-<!--                        <div class="portfolioSummary">-->
-<!--                            <div class="title">식품 브랜드 밀잇 브랜드 콘테스트</div>-->
-<!--                            <div class="info">-->
-<!--                                <h5>싱싱한초록546</h5> ·-->
-<!--                                <div class="hit">-->
-<!--                                    조회수 363-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>&lt;!&ndash;cardList&ndash;&gt;-->
-<!--                <div class="cardList">-->
-<!--                    <a href="#">-->
-<!--                        <div class="img">-->
-<!--                            &lt;!&ndash;포토폴리오가 들어갈 영역&ndash;&gt;-->
-<!--                        </div>-->
-<!--                        <div class="portfolioSummary">-->
-<!--                            <div class="title">식품 브랜드 밀잇 브랜드 콘테스트</div>-->
-<!--                            <div class="info">-->
-<!--                                <h5>싱싱한초록546</h5> ·-->
-<!--                                <div class="hit">-->
-<!--                                    조회수 363-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>&lt;!&ndash;cardList&ndash;&gt;-->
-<!--                <div class="cardList">-->
-<!--                    <a href="#">-->
-<!--                        <div class="img">-->
-<!--                            &lt;!&ndash;포토폴리오가 들어갈 영역&ndash;&gt;-->
-<!--                        </div>-->
-<!--                        <div class="portfolioSummary">-->
-<!--                            <div class="title">식품 브랜드 밀잇 브랜드 콘테스트</div>-->
-<!--                            <div class="info">-->
-<!--                                <h5>싱싱한초록546</h5> ·-->
-<!--                                <div class="hit">-->
-<!--                                    조회수 363-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>&lt;!&ndash;cardList&ndash;&gt;-->
-<!--                <div class="cardList">-->
-<!--                    <a href="#">-->
-<!--                        <div class="img">-->
-<!--                            &lt;!&ndash;포토폴리오가 들어갈 영역&ndash;&gt;-->
-<!--                        </div>-->
-<!--                        <div class="portfolioSummary">-->
-<!--                            <div class="title">식품 브랜드 밀잇 브랜드 콘테스트</div>-->
-<!--                            <div class="info">-->
-<!--                                <h5>싱싱한초록546</h5> ·-->
-<!--                                <div class="hit">-->
-<!--                                    조회수 363-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>&lt;!&ndash;cardList&ndash;&gt;-->
-<!--                <div class="cardList">-->
-<!--                    <a href="#">-->
-<!--                        <div class="img">-->
-<!--                            &lt;!&ndash;포토폴리오가 들어갈 영역&ndash;&gt;-->
-<!--                        </div>-->
-<!--                        <div class="portfolioSummary">-->
-<!--                            <div class="title">식품 브랜드 밀잇 브랜드 콘테스트</div>-->
-<!--                            <div class="info">-->
-<!--                                <h5>싱싱한초록546</h5> ·-->
-<!--                                <div class="hit">-->
-<!--                                    조회수 363-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>&lt;!&ndash;cardList&ndash;&gt;-->
-<!--                <div class="cardList">-->
-<!--                    <a href="#">-->
-<!--                        <div class="img">-->
-<!--                            &lt;!&ndash;포토폴리오가 들어갈 영역&ndash;&gt;-->
-<!--                        </div>-->
-<!--                        <div class="portfolioSummary">-->
-<!--                            <div class="title">식품 브랜드 밀잇 브랜드 콘테스트</div>-->
-<!--                            <div class="info">-->
-<!--                                <h5>싱싱한초록546</h5> ·-->
-<!--                                <div class="hit">-->
-<!--                                    조회수 363-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>&lt;!&ndash;cardList&ndash;&gt;-->
-<!--                <div class="cardList">-->
-<!--                    <a href="#">-->
-<!--                        <div class="img">-->
-<!--                            &lt;!&ndash;포토폴리오가 들어갈 영역&ndash;&gt;-->
-<!--                        </div>-->
-<!--                        <div class="portfolioSummary">-->
-<!--                            <div class="title">식품 브랜드 밀잇 브랜드 콘테스트</div>-->
-<!--                            <div class="info">-->
-<!--                                <h5>싱싱한초록546</h5> ·-->
-<!--                                <div class="hit">-->
-<!--                                    조회수 363-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </a>-->
-<!--                </div>&lt;!&ndash;cardList&ndash;&gt;-->
             </section>
 
             <nav aria-label="Page navigation example">
