--- a/src/main/resources/templates/notifications/eventWrite.html
+++ b/src/main/resources/templates/notifications/eventWrite.html
@@ -31,21 +31,21 @@
                 <label for="eventCreateTime">이벤트 생성일</label>
                 <input type="date" id="eventCreateTime" name="eventCreateTime" class="form-control"
                        th:value="${eventDTO != null && eventDTO.eventCreateTime != null ? eventDTO.eventCreateTime : ''}"
-                       th:readonly="${eventDTO != null && eventDTO.eventNum != null}" required>
+                       th:readonly="${eventDTO != null && eventDTO.eventNum != null}">
             </div>
 
             <div class="row">
                 <!-- 이벤트 시작일 설정 -->
                 <div class="col-md-6 mb-3">
                     <label for="eventStartDate">이벤트 시작일</label>
-                    <input type="date" id="eventStartDate" name="eventStartDate" class="form-control" required
+                    <input type="date" id="eventStartDate" name="eventStartDate" class="form-control"
                            th:value="${eventDTO != null && eventDTO.eventStartDate != null ? eventDTO.eventStartDate : ''}">
                 </div>
 
                 <!-- 이벤트 마감일 설정 -->
                 <div class="col-md-6 mb-3">
                     <label for="eventEndDate">이벤트 마감일</label>
-                    <input type="date" id="eventEndDate" name="eventEndDate" class="form-control" required
+                    <input type="date" id="eventEndDate" name="eventEndDate" class="form-control"
                            th:value="${eventDTO != null && eventDTO.eventEndDate != null ? eventDTO.eventEndDate : ''}">
                 </div>
             </div>
@@ -65,8 +65,6 @@
 
                 <!-- 기존 이미지가 있을 경우 보여줌 -->
                 <div th:if="${eventDTO.eventImageName != null}" class="mt-2">
-<!--                    <img th:src="@{'https://doh-contest-storage.s3.ap-northeast-2.amazonaws.com/'+${eventDTO.eventImageName}}"-->
-<!--                         alt="이벤트 이미지" class="img-thumbnail" width="200">-->
                     <img th:src="${eventDTO.eventImageName}"
                          alt="이벤트 이미지" class="img-thumbnail" width="200">
                 </div>
@@ -82,8 +80,13 @@
                 <!-- 등록/수정 버튼 -->
                 <button type="submit" class="btn btn-primary"
                         th:text="${eventDTO.eventNum != null ? '수정' : '등록'}"></button>
-                <button type="button" class="btn btn-secondary" id="tempSaveBtn">임시 저장</button>
+
+                <!-- 임시 저장 버튼 -->
+                <button type="button" class="btn btn-secondary" id="tempSaveBtn"
+                        th:text="${eventDTO.eventTempSave ? '수정' : '임시 저장'}"
+                        onclick="handleTempSave()"></button>
             </div>
+
         </form>
     </div>
 </th:block>
