:fire: 문의 댓글 삭제

--- a/src/main/resources/templates/contest/ContestView.html
+++ b/src/main/resources/templates/contest/ContestView.html
@@ -18,9 +18,8 @@
             <h1><p>제목 : <span th:text="${contestUploadDTO.conTitle}"></span></p></h1>
             <p>회사명 : <span th:text="${contestUploadDTO.conCompanyName}"></span></p>
             <div class="meta">
-                <span id="request-tab" onclick="showContent('request')">요청 사항</span>
-                <span id="comments-tab" onclick="showContent('comments')">문의 댓글</span>
-                <span id="work-tab" onclick="showContent('work')">작품 목록</span>
+                <span id="request-tab" onclick="showContent('request')">📋 요청 사항</span>
+                <span id="work-tab" onclick="showContent('work')">👥 참여자</span>
             </div>
         </div>
         <!-- 요청사항 -->
