콘테스트 참여(지원하기) 로직 구현 완료
콘테스트 참여(지원하기) 로직 구현 완료

--- a/src/main/resources/static/css/list/applicationTerms.css
+++ b/src/main/resources/static/css/list/applicationTerms.css
@@ -1,4 +1,3 @@
-@import url('https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css');
 
 :root
 {
@@ -31,11 +30,14 @@ main
 /* 콘테스트 정보 영역 */
 .contestWarap
 {
+    width: 100%;
     height: 114px;
     padding: 15px 35px 15px 35px;
+    box-sizing:border-box;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 40px;
 }
 
 .day, .applyInfo
@@ -75,12 +77,19 @@ a
     color: var(--color-black);
     text-decoration-line: none;
 }
+
 .briefing
 {
-    font-size: var(--font-size-20);
-    padding: 15px 20px;
+    font-size: var(--font-size-16);
+    padding: 10px 20px;
     border: 1px solid var(--line-gray);
     border-radius: 6px;
+    &:hover
+    {
+        border: 1px solid var(--color-black);
+        background: var(--color-black);
+        color: var(--color-white);
+    }
 }
 
 /* section */
@@ -182,6 +191,7 @@ section
     width: 92px;
     height: 45px;
     border-radius: 6px;
+    gap : 5px;
     background-color: var(--line-gray);
     cursor: pointer;
     &:hover
