- userEmail 컬럼 DB 연결

--- a/src/main/resources/templates/contest/ContestPay2.html
+++ b/src/main/resources/templates/contest/ContestPay2.html
@@ -54,6 +54,8 @@
                      body: JSON.stringify({
                          imp_uid: response.imp_uid,       // 아임포트 고유번호
                          merchant_uid: response.merchant_uid, // 주문 고유 번호
+                         userEmail: userEmail // userEmail을 함께 전송
+
                      })
                  });
 
